--- a/app/components/main-content/main-content.module.scss
+++ b/app/components/main-content/main-content.module.scss
@@ -1,9 +1,10 @@
 .container {
   display: flex;
   flex-direction: row;
+  height: calc(100vh - 60px);
 }
 
 .main {
   flex-grow: 1;
-  padding: 2rem;
+  overflow: auto;
 }
