--- a/app/components/sidebar/sidebar.module.scss
+++ b/app/components/sidebar/sidebar.module.scss
@@ -8,7 +8,8 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  overflow: hidden;
+  overflow: auto;
+  letter-spacing: 0;
 }
 
 .menuContent {
@@ -20,6 +21,9 @@
   list-style: none;
   padding: 0;
   width: 100%;
+  li {
+    margin: 0;
+  }
 }
 
 .menuItem {
@@ -35,7 +39,7 @@
 }
 
 .open {
-  width: 250px;
+  min-width: 250px;
 }
 
 .closed {
