--- a/app/components/navbar/navbar.module.scss
+++ b/app/components/navbar/navbar.module.scss
@@ -1,7 +1,7 @@
 .navbar {
   width: 100%;
   height: 60px;
-  background-color: #007f61;
+  background-color: #254336;
   color: white;
   display: flex;
   align-items: center;
