--- a/app/recipe/[id]/page.module.scss
+++ b/app/recipe/[id]/page.module.scss
@@ -5,11 +5,34 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+  gap: 5%;
+  width: 100%;
+  position: relative;
+}
+
+.headerLeft {
+  flex-basis: 60%;
+}
+
+.headerRight {
+  flex-basis: 40%;
+}
+
 .description {
+  padding-top: 2rem;
   padding-left: 0.25rem;
-  font-style: italic;
+  line-height: 2.5;
 }
 
 .divider {
   margin: 1rem 0;
+}
+
+.image {
+  // max-width: 16rem;
+  max-width: 32rem;
+  min-width: 16rem;
 }
