--- a/app/components/recipe-form/recipe-form.module.scss
+++ b/app/components/recipe-form/recipe-form.module.scss
@@ -1,4 +1,7 @@
 .container {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 75%;
 }
