--- a/app/components/recipe-form/recipe-form.module.scss
+++ b/app/components/recipe-form/recipe-form.module.scss
@@ -5,3 +5,11 @@
   width: 100%;
   height: 75%;
 }
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 35%;
+  min-width: 22rem;
+}
