--- a/app/components/recipe-form/recipe-form.module.scss
+++ b/app/components/recipe-form/recipe-form.module.scss
@@ -3,13 +3,21 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 75%;
+  height: 100%;
+}
+
+.title {
+  margin-bottom: 1rem;
 }
 
 .content {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 35%;
+  width: 50%;
   min-width: 22rem;
+}
+
+.submitBtn {
+  width: fit-content;
 }
