--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,4 +1,33 @@
 .container {
+  position: relative;
+  max-width: 1024px;
+  margin: 3rem auto;
+  padding: 0 2rem;
+}
+
+.searchbox {
+  padding: 3rem 0;
+  position: sticky;
+  top: 0;
+  background-color: #f6f8fa;
+}
+
+.flexRow {
   display: flex;
-  height: 100%;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+
+.cardGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1rem;
+}
+
+.card {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 1rem;
+  box-sizing: border-box;
+  border-radius: 0.25rem;
 }
