--- a/app/create/page.module.scss
+++ b/app/create/page.module.scss
@@ -2,10 +2,14 @@
   margin: auto;
   max-width: 1024px;
   height: 100%;
+  padding: 4rem;
 }
 
 .title {
   margin-bottom: 1rem;
+}
+
+.options {
 }
 
 .content {
